fixed top spacing for buttons

--- a/app/assets/stylesheets/pages/home/_top_container.scss
+++ b/app/assets/stylesheets/pages/home/_top_container.scss
@@ -22,7 +22,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 0.5rem;
-    margin-top: 4.75rem;
+    margin-top: 4.1rem;
     margin-inline: auto;
     padding-inline: 1.25rem;
   }
